--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
