--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,11 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "email-validator": "^2.0.4",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {},
   "scripts": {
