--- a/back/package.json
+++ b/back/package.json
@@ -14,10 +14,12 @@
     "email-validator": "^2.0.4",
     "mongoose-unique-validator": "^2.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
