--- a/front/package.json
+++ b/front/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.3",
+    "node-sass": "^7.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
